--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.52"
 serde = { version = "1.0.133", features = ["derive"] }
 serde_yaml = "0.8.23"
+structopt = "0.3.25"
