--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ anyhow = "1.0.52"
 serde = { version = "1.0.133", features = ["derive"] }
 serde_yaml = "0.8.23"
 structopt = "0.3.25"
+simple_excel_writer = "0.1.9"
