--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ anyhow = "1.0.52"
 serde = { version = "1.0.133", features = ["derive"] }
 serde_yaml = "0.8.23"
 structopt = "0.3.26"
-simple_excel_writer = "0.1.9"
+mktemp = "0.4.1"
+xlsxwriter = "0.3.5"
