--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.56"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_yaml = "0.8.23"
 structopt = "0.3.26"
+clap = { version = "3.1.6", features = ["derive", "env"] }
 mktemp = "0.4.1"
 xlsxwriter = "0.3.5"
 regex = "1.5.5"
